fix(versioning): ensure both files are unzipped or copied as single files for diff calculation
- Add detailed debugging logs for file extraction and comparison
- Refactor branch logic to only allow diff calculation when both previous and new files are OOXML (unzipped) or both are regular files (single file copy)
- Prevent folder-file structure mismatch to avoid null input and diff calculation failure
- Throw clear exception and clean up tmp files when file types do not match